# Oversampling_matlab

./: .S_cakeCut.m.swp  .gitignore  F_2D_SG.m~  F_2D_SG_affine.m  F_HcakeCut.m  F_append2.m  F_cakeCut.m  F_cakeCut.m~  F_download_OMI.m  F_download_subset_OMNO2.m  F_if_square.m  F_interp_era.m  F_merge_l2g_data.m  F_polyarea.m  F_regrid_OMI.m  F_regrid_OMIPROFOZ.m  F_regrid_OMIPROFOZ_NARR.m  F_regrid_OMIPROFOZ_km.m  F_regrid_OMI_NARR.m  F_regrid_OMI_km.m  F_regrid_TROPOMI.m  F_subset_OMCHOCHO.m  F_subset_OMHCHO.m  F_subset_OMNO2.m  F_subset_OMPIXCOR.m  FoV75Area.mat  L3plot.mat  LICENSE  OMI_BDR.mat  OMPS_BDR.mat  README.md  Readme.yml  S_cakeCut.m  Subset_PROFOZ.py  data.dvc  ellipse.m  environment.yml  main_OMNO2_oversampling.m  msat_l3.py  popy.py  (+18 more)
.dvc/: config
ACMAP/: Readme.md  aircraft_profiles.py  aqs.py
CAREER/: TEMPO.py  campd.py  ctm.py  fitting.py  gridded.py  level2.py  nnfitting.py  tempo.py
IASI_code/: F_2D_SG.m  F_construct_ellipse.m  F_define_IASI_pixel.m  F_regrid_IASI.m  F_subset_IASI.m  S_IASI_oversampling.m  daysss.mat  main_IASI_oversampling.m  regridding_intro.docx  testbed_IASI_oversampling.m
IDS/: landtype_nn.py  nnfitting.py
RRNES/: EPA.py  Readme_RRNES.md  basin_emissions.py  city_emissions.py  rrnes.py  rrnes_level3.py  rrnes_level4.py
drivers/: IASINH3_config.yml  save_l3_ymd.py  train_cefit.py  train_chemfit.py
matlab/: F_2D_SG.m  F_2D_SG_OMI_KY.m  F_HcakeCut_old.m  F_VcakeCut.m  F_append1.m  F_download_OMI.m  F_download_subset_OMNO2.m  F_dropinthebox_OMI_km.m  F_interp_narr.m  F_oversample_OMI_NARR.m  F_oversample_OMI_km.m  F_plot_polygon.m  F_read_BEHR_h5.m  F_read_OMPS_h5.m  F_read_he5.m  F_regrid_OMI.m  F_regrid_OMIPROFOZ.m  F_regrid_OMIPROFOZ_km.m  F_regrid_OMI_ERA.m  F_regrid_OMI_KY.m  F_regrid_OMI_NARR.m  F_regrid_OMI_km.m  F_regrid_TROPOMI.m  F_regrid_TROPOMI_met.m  F_save_gesdisc_url.m  F_subset_BEHR.m  F_subset_OMBRO.m  F_subset_OMHCHO.m  F_subset_OMHCHO_download.m  F_subset_OMNO2.m  F_tessellate_OMI.m  F_tessellate_OMI_km.m  S_cakeCut.m  Subset_PROFOZ.py  download_OMPIXCOR.m  main_OMNO2_oversampling.m  plot_houston_oversampling.m  regrid_OMHCHO.m  regrid_OMHCHO_OMNO2.m  (+10 more)
(+12 files in other folders)
